2011-01-23 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/*.xml: Updated documentations
	* docs/images/docs*.png: updated documentation screenshots with 
		newer options and added transparency.
	
2011-01-21 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.*: Add "config/video/share_video_settings". "yes"
		means that fullscreen and window share the same video
		settings (else "no"). Default is yes.
		Removed unused MENU_APPLY.
	* gumps/VideoOptions_gump.*: Only set video options in the config
		after yes/no gump. Add button for share_video_settings.

2011-01-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* keys.cc: Fix regression in 6701 where the last created key
		description was using every key except it. Prevent buffer
		overflow from having a lot of last created keys.

2011-01-19 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/*.xml, *.xsl: Updated documentations and FAQ, changes
		section moved to the bottom.
	* docs/xml: Removed README and added HowTo instead to avoid a
		conflict with the generated documentation.
	* docs/xml/makefile: use gsed instead of sed

2011-01-18 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc: Make sure to initialize in_exult_menu variable

2011-01-18 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.h: is_in_exult_menu and set_in_exult_menu used
		for menu options when in the Exult menu
	* exultmenu.cc, gumps/Gamemenu_gump.*: use the new functions
	* gumps/AudioOptions_gump.*: Don't save custom sfx package if it
		doesn't change. Fixes bug id 3152567. 
		Don't allow changing sfx package in Exult menu. Sfx can still
		be enabled or disabled.

2011-01-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/GameplayOptions_gump.cc: Make paperdolls the bottom
		option so that there isn't a gap if it isn't a choice.

2011-01-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/VideoOptions_gump.cc: Fix crash on toggle
